# flpdf

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  beads.html  codecov.yml  release-plz.toml
.beads/: config.yaml  metadata.json
.beads/hooks/: post-commit  post-rewrite
.claude/rules/: pdf-rust-doc-review-patterns.md  pdf-rust-review-patterns.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  pr-labeler.yml  release-plz.yml  release-pr-approval-gate.yml  release-prepare.yml  release.yml
crates/flpdf/: Cargo.toml  LICENSE-APACHE
crates/flpdf-cli/: Cargo.toml
crates/flpdf-cli/src/: main.rs
crates/flpdf-cli/tests/: cli_acroform_transforms.rs  cli_attachment_lifecycle.rs  cli_byte_identical.rs  cli_byte_identical_overlay.rs  cli_chained_indirect.rs  cli_check_exitcodes.rs  cli_deterministic_id.rs  cli_encryption_inspect.rs  cli_full_rewrite.rs  cli_json.rs  cli_linearize.rs  cli_linearize_objstm.rs  cli_linearize_qpdf.rs  cli_multi_filter_chain.rs  cli_object_streams.rs  cli_object_streams_qpdf_parity.rs  cli_optimization_matrix.rs  cli_outline_pagelabels_qpdf.rs  cli_overlay.rs  cli_overlay_byte.rs  cli_pages_annot_nullout_qpdf.rs  cli_pages_objr_obj_annot_p_drop_qpdf.rs  cli_pages_pagelabels_qpdf.rs  cli_pages_structtree_pg_drop_qpdf.rs  cli_pages_thread_bead_p_drop_qpdf.rs  cli_password_hex_key_tests.rs  cli_qdf.rs  cli_qdf_roundtrip_matrix.rs  cli_recompress_flate.rs  cli_show_stream.rs  cli_static_id.rs  cli_stream_data.rs  cli_tests.rs  compat_baseline_filter.rs  compat_baseline_metadata.rs  compat_baseline_static_id.rs  compat_matrix_baseline.rs  compat_matrix_tests.rs  compat_smoke.rs  encrypt_cli_tests.rs  (+10 more)
crates/flpdf-cli/tests/common/: mod.rs
crates/flpdf-cli/tests/support/: comparators.rs  filter_fixtures.rs  mod.rs
crates/flpdf-cli/tests/support/json_diff/: mod.rs
crates/flpdf-test-compare/: Cargo.toml
crates/flpdf/examples/: extract_first_5_pages.rs  extract_page.rs  extract_pages.rs  inspect.rs  list_form_fields.rs  merge_pdfs.rs  pull_attachments.rs  reorder_pages.rs  splice_pages.rs  walk_outline.rs
crates/flpdf/examples/common/: mod.rs
crates/flpdf/src/: acroform_document_helper.rs  acroform_field_prune.rs  annotation_helper.rs  appearance.rs  ascii85.rs  ascii_hex.rs  attachment_list.rs  cache.rs  check.rs  content_stream.rs  default_appearance.rs  diagnostics.rs  embedded_files.rs  encrypt_setup.rs  error.rs  filespec_helper.rs  filters.rs  fonts.rs  json.rs  json_inspect.rs  lib.rs  name_number_tree.rs  name_tree_dests.rs  object.rs  object_copy.rs  objr_obj_annot_p.rs  outline.rs  outline_dest_remap.rs  outline_document_helper.rs  overlay.rs  overlay_annotations.rs  overlay_appearance_stream.rs  page_annotation_enum.rs  page_annotation_flatten.rs  page_closure.rs  page_collate.rs  page_combine.rs  page_document_helper.rs  page_extract.rs  page_form_xobject.rs  (+27 more)
crates/flpdf/src/linearization/: back_patch.rs  check.rs  hint_page.rs  hint_shared.rs  hint_stream.rs  inherited_attrs.rs  mod.rs  part1.rs  plan.rs  renumber.rs  show.rs  writer.rs  xref_stream.rs
crates/flpdf/src/reader/: file_object.rs
crates/flpdf/src/security/: mod.rs  password.rs  primitives.rs  standard.rs
crates/flpdf/src/writer/: object_streams.rs
crates/flpdf/tests/: acroform_document_helper_tests.rs  adbe_ext_qpdf_parity.rs  adbe_removal_qpdf_parity.rs  annotation_helper_error_tests.rs  annotation_helper_tests.rs  check_tests.rs  cmp_diff_zero_tests.rs  cmp_generate_objstm_tests.rs  cmp_linearize_objstm_tests.rs  cmp_linearize_tests.rs  cmp_null_visibility_tests.rs  coalesce_tests.rs  compress_streams_tests.rs  content_stream_tests.rs  dangling_body_ref_linearize_tests.rs  deterministic_id_qpdf_parity_tests.rs  deterministic_id_xref_stream_tests.rs  embedded_files_tests.rs  encrypt_writer_smoke.rs  filespec_helper_tests.rs  fonts_tests.rs  fuzz_regression_tests.rs  helper_api_tests.rs  indirect_length_adjacent_endstream_tests.rs  inspection_tests.rs  kept_indirect_length_holder_tests.rs  linearize_classic_tests.rs  linearize_objstm_generate_tests.rs  lone_flate_preserve_tests.rs  multi_filter_chain_tests.rs  name_tree_dests_tests.rs  newline_before_endstream_tests.rs  object_copy_tests.rs  object_streams_writer_tests.rs  object_tests.rs  orphan_indirect_length_holder_tests.rs  outline_document_helper_tests.rs  outline_pagelabels_e2e_tests.rs  page_closure_tests.rs  page_document_helper_tests.rs  (+25 more)
crates/flpdf/tests/common/: mod.rs
crates/qpdf-test-compare/: Cargo.toml
crates/qpdf-test-compare/src/: clean.rs  compare.rs  lib.rs  main.rs  orchestrator.rs
crates/qpdf-test-compare/tests/: cli_bad_input.rs  cli_compare_why.rs  cli_match_path.rs  cli_usage.rs  cli_version.rs  e2e.rs  orchestrator.rs
docs/: RELEASE_SETUP.md  qpdf-compat-decisions.md  qpdf-compat.md  signed-pdf-external-validation.md  signed-pdf.md  threat-model.md
docs/plans/: 2026-05-16-resilient-stacked-merge-design.md  2026-05-20-flpdf-9hc-5-9-incremental-generate-objstm.md  2026-05-27-flpdf-9hc-11-14-json-schema-diff.md  2026-06-02-page-closure-walker.md  2026-06-03-page-splice.md  2026-06-04-cross-document-object-copier.md  2026-06-06-flpdf-5h5.8-doc-examples.md  2026-06-06-flpdf-9hc-22-8-signed-preservation-matrix.md  2026-06-06-name-number-tree.md  2026-06-06-outline-document-helper.md  2026-06-06-page-labels.md  2026-06-06-rotate-flattening.md  2026-06-07-catalog-first-renumber.md  2026-06-07-flpdf-4924-neutralize-cross-page-annots.md  2026-06-07-single-page-extract.md  2026-06-08-cookbook-examples.md  2026-06-08-flpdf-2tmg-sd-cross-page-neutralize.md  2026-06-09-helper-api-smoke-roundtrip.md  2026-06-10-flpdf-tc3e-qpdf-stderr-format.md  2026-06-10-flpdf-tq35-xref-repair-coverage.md  2026-06-10-link-annot-destination-nullout.md  2026-06-10-outline-dest-nullout-parity.md  2026-06-10-patch-coverage-gate-design.md  2026-06-10-xref-repair-diag-qpdf-parity.md  (+67 more)
fuzz/: Cargo.toml  README.md
scripts/: patch-coverage.sh
tests/golden/: README.md  (+3 more)
(+93 files in other folders)
