[workspace]
members = [
    "crates/flpdf",
    "crates/flpdf-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.3"
authors = ["Mitsuru Hayasaka <10877+mitsuru@users.noreply.github.com>"]
repository = "https://github.com/fulgur-rs/flpdf"
homepage = "https://github.com/fulgur-rs/flpdf"
rust-version = "1.87"

[workspace.dependencies]
thiserror = "2"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rc4 = "0.1"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding"] }
md-5 = "0.10"
sha2 = "0.10"
stringprep = "0.1"
hex = "0.4"
serde_json = "1"
# Cryptographically secure RNG for encryption write-side IV / random-bytes use
# (flpdf-9hc.4.9 --encrypt). Pure-Rust frontend; OS APIs underneath
# (Linux getrandom(2), macOS SecRandomCopyBytes, Windows BCryptGenRandom).
# Already present as a transitive dep via tempfile/etc — direct declaration
# is free build-closure-wise.
getrandom = "0.2"
