[package]
name = "flpdf-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
description = "Command-line tools for flpdf, mirroring qpdf inspection and rewrite subcommands."
documentation = "https://docs.rs/flpdf-cli"
keywords = ["pdf", "qpdf", "cli", "linearization"]
categories = ["command-line-utilities"]

[[bin]]
name = "flpdf"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
flpdf = { path = "../flpdf", version = "0.1.3" }

[dev-dependencies]
assert_cmd.workspace = true
flpdf = { path = "../flpdf", version = "0.1.3" }
predicates.workspace = true
serde_json = { workspace = true }
tempfile.workspace = true
