[package]
name = "flpdf-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
description = "Command-line tools for flpdf, mirroring qpdf inspection and rewrite subcommands."
documentation = "https://docs.rs/flpdf-cli"
keywords = ["pdf", "qpdf", "cli", "linearization"]
categories = ["command-line-utilities"]

[[bin]]
name = "flpdf"
path = "src/main.rs"
doc = false

[features]
# Forward flpdf's classic-libz deflate backend so the CLI binary built by the
# overlay byte-comparison tests produces output byte-identical to qpdf (which
# links zlib). Default builds stay Pure Rust (miniz_oxide); see CLAUDE.md's
# DEFLATE carve-out. Test/parity only.
qpdf-zlib-compat = ["flpdf/qpdf-zlib-compat"]

[dependencies]
clap.workspace = true
flpdf = { path = "../flpdf", version = "0.1.6" }

[dev-dependencies]
assert_cmd.workspace = true
flpdf = { path = "../flpdf", version = "0.1.6" }
predicates.workspace = true
regex.workspace = true
serde_json = { workspace = true }
tempfile.workspace = true
