[package]
name = "flpdf-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
description = "Command-line tools for flpdf, mirroring qpdf inspection and rewrite subcommands."
documentation = "https://docs.rs/flpdf-cli"
keywords = ["pdf", "qpdf", "cli", "linearization"]
categories = ["command-line-utilities"]

[[bin]]
name = "flpdf"
path = "src/main.rs"
doc = false

[features]
default = []
# Opt-in: build the `flpdf` binary against flpdf's zlib deflate backend so its
# DEFLATE output matches qpdf's compress2() byte-for-byte. Used only for the
# end-to-end byte-identical CLI tests (cli_byte_identical); production builds
# stay Pure Rust (miniz_oxide). Forwards to flpdf's own `qpdf-zlib-compat`.
qpdf-zlib-compat = ["flpdf/qpdf-zlib-compat"]

[dependencies]
clap.workspace = true
flpdf = { path = "../flpdf", version = "0.2.1" }

[dev-dependencies]
assert_cmd.workspace = true
flpdf = { path = "../flpdf", version = "0.2.1" }
predicates.workspace = true
regex.workspace = true
serde_json = { workspace = true }
tempfile.workspace = true
