[package]
name = "flpdf"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
description = "A pure-Rust PDF toolkit modeled on qpdf — read, rewrite, linearize, and inspect PDFs."
documentation = "https://docs.rs/flpdf"
keywords = ["pdf", "qpdf", "parser", "linearization"]
categories = ["parser-implementations", "encoding"]

[dependencies]
thiserror.workspace = true
flate2.workspace = true
rc4.workspace = true
aes.workspace = true
cbc.workspace = true
md-5.workspace = true
sha2.workspace = true
stringprep.workspace = true
hex.workspace = true

[features]
default = []
# Opt-in: link classic libz (zlib1g) via libz-sys so flate2's deflate output
# matches qpdf's compress2() at level 6 byte-for-byte. Used by bytes-identical
# tests only — production builds stay Pure Rust (miniz_oxide).
qpdf-zlib-compat = ["flate2/zlib"]
