[package]
name = "qpdf-test-compare"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Rust port of qpdf's compare-for-test/qpdf-test-compare, for the flpdf-qtest harness."

[[bin]]
name = "qpdf-test-compare"
path = "src/main.rs"

[lib]
name = "qpdf_test_compare"
path = "src/lib.rs"

[features]
default = []
qpdf-zlib-compat = ["flpdf/qpdf-zlib-compat"]

[dependencies]
flpdf = { path = "../flpdf" }

[dev-dependencies]
assert_cmd.workspace = true
flate2.workspace = true
predicates.workspace = true
tempfile.workspace = true
